crates/sol-types/tests/ui/features/not(json)/abi.stderr
error: the `#[sol(dyn_abi)]` attribute requires the `"json"` feature
  --> tests/ui/features/not(json)/abi.rs:3:1
   |
3  | / sol! {
4  | |     #![sol(abi)]
5  | |
6  | |     contract C {
...  |
22 | |     }
23 | | }
   | |_^
   |
   = note: this error originates in the macro `sol` (in Nightly builds, run with -Z macro-backtrace for more info)
